--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,4 +1,6 @@
-
+body { 
+    padding-top: 65px; 
+}
 .login-dp{
     min-width: 250px;
     padding: 14px 14px 0;
@@ -56,4 +58,14 @@
 #auth-error{
     color: red;
     
+}
+
+#calendar {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+
+.notresizable {
+   resize: none;
 }
