--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -19,7 +19,7 @@
 <script src="{% static 'main/main.js' %}"></script>
 
 <head>
-  <title>Reserva de Espaços CETEC</title>
+  <title>Reserva de Recursos CETEC</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
   <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar">
       <li>
-        <a href="#">Reserva de salas CETEC</a>
+        <a href="/">Reserva de Recursos CETEC</a>
       </li>
     </ul>
   </div>
